# pictool

./: .gitignore  CMakeLists.txt  QtAwesome  README.org  bootstrap.py
doc/ui/: app.sketch
include/pic_tool/: global.h  pic_too.h
include/pic_tool/settings/: setting.h
include/pictool/: global.h
include/pictool/internal/: capture_window_manager.h  global.h  util.h
include/pictool/internal/util/: util_eq.h
samples/: im_show_demo.py
scripts/: im_show_demo.py  init_easybot.py
src/: CMakeLists.txt  global.cc  main.cc  pic_tool.cc  size_config.cc  size_config.h
src/comm/: util.cc  util.h
src/comm/manager/capture/: capture_window_manager.cc
src/comm/manager/crop/: crop_manager.cc  crop_manager.h
src/comm/util/: util.cc  util.h  util_cv.cc  util_cv.h  util_eq.cc  util_eq.h
src/components/hsv_filter/: hsv_filter_view.cc  hsv_filter_view.h
src/components/range-slider/: RangeSlider.cpp  RangeSlider.h
src/components/slider-view/: slider_view.cc  slider_view.h
src/include/pt/: util.h
src/manager/capture/: capture_window_manager.cc  capture_window_manager.h
src/module/: size_config.h
src/module/settings/: setting.cc
src/ui/: app.cc  app.h  main_window.cc  main_window.h
src/ui/components/central_view/: central_view.cc  central_view.h
src/ui/components/central_view/components/: central_image.cc  central_image.h  check_state_button.cc
src/ui/panel/central_view/components/: check_state_button.cc  check_state_button.h
src/ui/panel/hsv/: hsv_filter_view.cc  hsv_filter_view.h
src/ui/panel/hsv/components/: hsv_filter_item_view.cpp  hsv_filter_item_view.h
src/ui/panel/main/: center_image_view.cc  center_image_view.h  graphic_image_view.cc  graphic_image_view.h  main_panel.cc  main_panel.h  op_mode.h
src/ui/panel/main/components/: op_button.cc  op_button.h
src/ui/panel/recently/: recently_panel.cc  recently_panel.h
src/util/: util.cc  util_cv.cc  util_cv.h  util_eq.cc
